--- a/PackageSources/html_ui/Pages/VCockpit/Instruments/A32NX_SU95/RTPI/template.html
+++ b/PackageSources/html_ui/Pages/VCockpit/Instruments/A32NX_SU95/RTPI/template.html
@@ -8693,9 +8693,10 @@
 	 * For improved performance, this component will only trigger renders when the
 	 * "update" custom event is emitted through an instrument.
 	 */
-	const SimVarProvider = ({
-	  children
-	}) => {
+	const SimVarProvider = _ref => {
+	  let {
+	    children
+	  } = _ref;
 	  const listeners = react.useRef({});
 	  const [cache, setCache] = react.useState({});
 	  useUpdate(deltaTime => {
@@ -8922,7 +8923,8 @@
 	 */
 
 
-	const useSimVar = (name, unit, maxStaleness = 0) => {
+	const useSimVar = function (name, unit) {
+	  let maxStaleness = arguments.length > 2 && arguments[2] !== undefined ? arguments[2] : 0;
 
 	  const value = useSimVarValue(name, unit, maxStaleness);
 	  const setter = useSimVarSetter(name, unit);
@@ -9011,7 +9013,7 @@
         @font-face {
   font-family: "AirbusRTPI";
 
-  src: url("/Fonts/AirbusRTPI.ttf") format("truetype");
+  src: url("/Fonts_SU95/AirbusRTPI.ttf") format("truetype");
 
   font-weight: 100;
 
@@ -9046,4 +9048,4 @@ text {
 
 <script type="text/html" import-script="/JS/dataStorage.js" import-async="false"></script>
 
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/A32NX/RTPI/template.js" import-async="false"></script>
+<script type="text/html" import-script="/Pages/VCockpit/Instruments/A32NX_SU95/RTPI/template.js" import-async="false"></script>
