--- a/PackageSources/html_ui/Pages/VCockpit/Instruments/Airliners/SU95/MFD/A320_Neo_MFD.html
+++ b/PackageSources/html_ui/Pages/VCockpit/Instruments/Airliners/SU95/MFD/A320_Neo_MFD.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="A320_Neo_MFD.css" />
-<link rel="stylesheet" href="/CSS/A32NX_Display_Common.css" />
+<link rel="stylesheet" href="/CSS_SU95/A32NX_Display_Common.css" />
 
 <script type="text/html" id="A320_Neo_MFD">
     <glasscockpit-highlight id="highlight"></glasscockpit-highlight>
@@ -29,7 +29,7 @@
 				</defs>
 			</svg>
             <div id="Map">
-                <map-instrument id="MapInstrument" map-mode="plan" bing-id="MFD" show-overlay="false" show-roads="false" config-path="/Pages/VCockpit/Instruments/Airliners/FlyByWire_A320_Neo/MFD/"></map-instrument>
+                <map-instrument id="MapInstrument" map-mode="plan" bing-id="MFD" show-overlay="false" show-roads="false" config-path="/Pages/VCockpit/Instruments/Airliners/SU95/MFD/"></map-instrument>
             </div>
 
             <div id="ModeChangeMask">
@@ -187,13 +187,13 @@
 </script>
 
 <script type="text/html" import-script="/JS/SimPlane.js" import-async="false"></script>
-<script type="text/html" import-script="/JS/A32NX_Util.js"></script>
+<script type="text/html" import-script="/JS_SU95/A32NX_Util.js"></script>
 <script type="text/html" import-script="/JS/dataStorage.js"></script>
-<script type="text/html" import-script="/Pages/A32NX_Utils/NXDataStore.js"></script>
-<script type="text/html" import-script="/Pages/A32NX_Core/A32NX_DMC.js"></script>
-<script type="text/html" import-script="/Pages/A32NX_Core/DisplayUnit.js"></script>
-<script type="text/html" import-script="/Pages/A32NX_Utils/arinc429.js"></script>
-<script type="text/html" import-script="/Pages/A32NX_Core/Adirs.js"></script>
+<script type="text/html" import-script="/Pages/SU95_Utils/NXDataStore.js"></script>
+<script type="text/html" import-script="/Pages/SU95_Core/A32NX_DMC.js"></script>
+<script type="text/html" import-script="/Pages/SU95_Core/DisplayUnit.js"></script>
+<script type="text/html" import-script="/Pages/SU95_Utils/arinc429.js"></script>
+<script type="text/html" import-script="/Pages/SU95_Core/Adirs.js"></script>
 <script type="text/html" import-script="/JS/Services/ToolBarPanels.js"></script>
 
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Shared/Utils/RadioNav.js"></script>
@@ -203,14 +203,14 @@
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/NavSystems/Shared/LogicElements/SelectableElement.js"></script>
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/NavSystems/Shared/LogicElements/SearchField.js"></script>
 
-<script type="text/html" import-template="/Pages/VCockpit/Instruments/A320_Neo/Map/A32NX_MapInstrument.html"></script>
+<script type="text/html" import-template="/Pages/VCockpit/Instruments/SU95/Map/A32NX_MapInstrument.html"></script>
 
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/NavSystems/A320_Neo/A32NX_NavSystem.js"></script>
+<script type="text/html" import-script="/Pages/VCockpit/Instruments/NavSystems/SU95/A32NX_NavSystem.js"></script>
 
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/FlyByWire_A320_Neo/A32NX_BaseAirliners.js"></script>
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/FlyByWire_A320_Neo/A32NX_BaseNDCompass.js"></script> <!-- MODIFIED -->
+<script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/SU95/A32NX_BaseAirliners.js"></script>
+<script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/SU95/A32NX_BaseNDCompass.js"></script> <!-- MODIFIED -->
 
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/FlyByWire_A320_Neo/MFD/A32NX_NDCompass.js"></script> <!-- MODIFIED -->
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/FlyByWire_A320_Neo/MFD/A32NX_NDInfo.js"></script> <!-- MODIFIED -->
+<script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/SU95/MFD/A32NX_NDCompass.js"></script> <!-- MODIFIED -->
+<script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/SU95/MFD/A32NX_NDInfo.js"></script> <!-- MODIFIED -->
 
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/FlyByWire_A320_Neo/MFD/A320_Neo_MFD.js"></script>
+<script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/SU95/MFD/A320_Neo_MFD.js"></script>
