--- a/PackageSources/html_ui/Pages/VCockpit/Instruments/A32NX_SU95/ATC/template.html
+++ b/PackageSources/html_ui/Pages/VCockpit/Instruments/A32NX_SU95/ATC/template.html
@@ -727,9 +727,10 @@
 	 * For improved performance, this component will only trigger renders when the
 	 * "update" custom event is emitted through an instrument.
 	 */
-	const SimVarProvider = ({
-	  children
-	}) => {
+	const SimVarProvider = _ref => {
+	  let {
+	    children
+	  } = _ref;
 	  const listeners = react.useRef({});
 	  const [cache, setCache] = react.useState({});
 	  useUpdate(deltaTime => {
@@ -956,7 +957,8 @@
 	 */
 
 
-	const useSimVar = (name, unit, maxStaleness = 0) => {
+	const useSimVar = function (name, unit) {
+	  let maxStaleness = arguments.length > 2 && arguments[2] !== undefined ? arguments[2] : 0;
 
 	  const value = useSimVarValue(name, unit, maxStaleness);
 	  const setter = useSimVarSetter(name, unit);
@@ -987,7 +989,8 @@
 	 * @see useSimVar if you're reading and writing from the same SimVar
 	 */
 
-	const useSplitSimVar = (readName, readUnit, writeName, writeUnit, maxStaleness = 0) => {
+	const useSplitSimVar = function (readName, readUnit, writeName, writeUnit) {
+	  let maxStaleness = arguments.length > 4 && arguments[4] !== undefined ? arguments[4] : 0;
 
 	  const value = useSimVarValue(readName, readUnit, maxStaleness);
 	  const setter = useSimVarSetter(readName, writeUnit || readUnit, writeName);
@@ -9136,7 +9139,7 @@
     <style id="ATC_BUNDLED_STYLE">
         /* same deal as above */
         @font-face {
-  src: url("/Fonts/AirbusRMP.ttf") format("truetype");
+  src: url("/Fonts_SU95/AirbusRMP.ttf") format("truetype");
 
   font-family: "Digital";
 
@@ -9166,4 +9169,4 @@ text {
 
 <script type="text/html" import-script="/JS/dataStorage.js" import-async="false"></script>
 
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/A32NX/ATC/template.js" import-async="false"></script>
+<script type="text/html" import-script="/Pages/VCockpit/Instruments/A32NX_SU95/ATC/template.js" import-async="false"></script>
