--- a/PackageSources/html_ui/Pages/VCockpit/Instruments/A32NX_SU95/BAT/template.html
+++ b/PackageSources/html_ui/Pages/VCockpit/Instruments/A32NX_SU95/BAT/template.html
@@ -8693,9 +8693,10 @@
 	 * For improved performance, this component will only trigger renders when the
 	 * "update" custom event is emitted through an instrument.
 	 */
-	const SimVarProvider = ({
-	  children
-	}) => {
+	const SimVarProvider = _ref => {
+	  let {
+	    children
+	  } = _ref;
 	  const listeners = react.useRef({});
 	  const [cache, setCache] = react.useState({});
 	  useUpdate(deltaTime => {
@@ -8922,7 +8923,8 @@
 	 */
 
 
-	const useSimVar = (name, unit, maxStaleness = 0) => {
+	const useSimVar = function (name, unit) {
+	  let maxStaleness = arguments.length > 2 && arguments[2] !== undefined ? arguments[2] : 0;
 
 	  const value = useSimVarValue(name, unit, maxStaleness);
 	  const setter = useSimVarSetter(name, unit);
@@ -8972,11 +8974,12 @@
 	  }), getRenderTarget());
 	};
 
-	const BatDisplay = ({
-	  number,
-	  x,
-	  y
-	}) => {
+	const BatDisplay = _ref => {
+	  let {
+	    number,
+	    x,
+	    y
+	  } = _ref;
 	  const [ltsTest] = useSimVar('L:A32NX_OVHD_INTLT_ANN', 'Bool', 200);
 	  const [voltage] = useSimVar("L:A32NX_ELEC_BAT_".concat(number, "_POTENTIAL"), 'Volts', 200);
 	  return /*#__PURE__*/jsxRuntime.jsx("text", {
@@ -9010,7 +9013,7 @@
         @font-face {
   font-family: "Digital";
 
-  src: url("/Fonts/AirbusBAT.ttf") format("truetype");
+  src: url("/Fonts_SU95/AirbusBAT.ttf") format("truetype");
 
   font-weight: 900;
 
@@ -9037,4 +9040,4 @@ text {
 
 <script type="text/html" import-script="/JS/dataStorage.js" import-async="false"></script>
 
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/A32NX/BAT/template.js" import-async="false"></script>
+<script type="text/html" import-script="/Pages/VCockpit/Instruments/A32NX_SU95/BAT/template.js" import-async="false"></script>
