--- a/PackageSources/html_ui/Pages/VCockpit/Instruments/A32NX_SU95/EcamPages/cond-page/template.html
+++ b/PackageSources/html_ui/Pages/VCockpit/Instruments/A32NX_SU95/EcamPages/cond-page/template.html
@@ -8703,9 +8703,10 @@
 	 * For improved performance, this component will only trigger renders when the
 	 * "update" custom event is emitted through an instrument.
 	 */
-	const SimVarProvider = ({
-	  children
-	}) => {
+	const SimVarProvider = _ref => {
+	  let {
+	    children
+	  } = _ref;
 	  const listeners = react.useRef({});
 	  const [cache, setCache] = react.useState({});
 	  useUpdate(deltaTime => {
@@ -8932,7 +8933,8 @@
 	 */
 
 
-	const useSimVar = (name, unit, maxStaleness = 0) => {
+	const useSimVar = function (name, unit) {
+	  let maxStaleness = arguments.length > 2 && arguments[2] !== undefined ? arguments[2] : 0;
 
 	  const value = useSimVarValue(name, unit, maxStaleness);
 	  const setter = useSimVarSetter(name, unit);
@@ -9105,15 +9107,16 @@
 	  });
 	};
 
-	const CondUnit = ({
-	  title,
-	  selectedTemp,
-	  cabinTemp,
-	  trimTemp,
-	  x,
-	  offset,
-	  hotAir
-	}) => {
+	const CondUnit = _ref => {
+	  let {
+	    title,
+	    selectedTemp,
+	    cabinTemp,
+	    trimTemp,
+	    x,
+	    offset,
+	    hotAir
+	  } = _ref;
 	  const rotateTemp = offset + selectedTemp;
 	  const polyPoints = "".concat(x + 4, ",206 ").concat(x, ",199 ").concat(x - 4, ",206");
 	  const gaugeD = "m ".concat(x - 26, " 208 Q ").concat(x, " 186 ").concat(x + 26, " 208");
@@ -9206,7 +9209,7 @@
         @font-face {
   font-family: "Ecam";
 
-  src: url("/Fonts/ECAMFontRegular.ttf") format("truetype");
+  src: url("/Fonts_SU95/ECAMFontRegular.ttf") format("truetype");
 
   font-weight: normal;
 
@@ -9308,4 +9311,4 @@ text {
     </style>
 </script>
 
-<script type="text/html" import-script="/Pages/VCockpit/Instruments/A32NX/EcamPages/cond-page/template.js"></script>
+<script type="text/html" import-script="/Pages/VCockpit/Instruments/A32NX_SU95/EcamPages/cond-page/template.js"></script>
